--- a/src/styles/helixPiles.module.css
+++ b/src/styles/helixPiles.module.css
@@ -3,7 +3,7 @@
     height: 100%;
     margin: 0px;
     padding: 0px;
-    background: white;
+    background: #EEF1F2;
     position: relative;
     display: flex;
     flex-direction: column;
