--- a/src/styles/introduceCo.module.css
+++ b/src/styles/introduceCo.module.css
@@ -3,17 +3,19 @@
     height: 100%;
     margin: 0px;
     padding: 0px;
-    background: white;
+    background: #EEF1F2;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
     transition: all 1s ease;
     /* border: 2px solid violet; */
 }
 
 .banner_container {
     position: relative;
+    width: 100%;
     height: 520px;
     display: flex;
     flex-direction: column;
@@ -83,59 +85,15 @@
     align-items: center;
 }
 
-.image_container {
+
+
+
+.greeting_wrapper{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
-    gap: 10px;
-    /* border: 2px solid green; */
-    transition: all 1s ease;
-}
-
-.inner_container {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 10px;
-    /* border: 2px solid red; */
-    transition: all 1s ease;
-}
-
-.small_image1 {
-    width: 450px;
-    height: 300px;
-    background-image: url(/introduce_img1.svg);
-    background-size: cover;
-    background-position: center;
-    transition: all 1s ease;
-}
-
-.small_image2 {
-    width: 450px;
-    height: 300px;
-    background-image: url(/introduce_img2.svg);
-    background-size: cover;
-    background-position: center;
-    transition: all 1s ease;
-}
-
-.large_image {
-    width: 910px;
-    height: 427.12px;
-    background-image: url(/introduce_img3.svg);
-    background-size: cover;
-    background-position: center;
-    transition: all 1s ease;
-}
-
-.greeting_wapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0px 20px 0px;
+    margin: 0px;
     /* border: 3px solid blue; */
     transition: all 1s ease;
 }
@@ -143,7 +101,7 @@
 .greeting_container {
     width: 850px;
     padding: 40px 30px 40px 30px;
-    background: rgba(222, 234, 246, 0.50);
+    background: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -157,8 +115,8 @@
 .greeting_inner_container {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     gap: 40px;
     align-self: stretch;
     transition: all 1s ease;
@@ -167,32 +125,51 @@
 .title {
     width: 100%;
     height: 10%;
-    color: #274FC1;
-    font-size: 32px;
+    color: #000000;
+    font-size: 48px;
     font-family: 'NanumGothic';
     font-weight: 800;
     letter-spacing: 1.60px;
     word-wrap: break-word;
+    text-align: center;
     transition: all 1s ease;
 }
 
 .content {
     width: 100%;
     color: black;
-    font-size: 20px;
+    font-size: 24px;
     font-family: 'NanumGothic';
     font-weight: 400;
     word-wrap: break-word;
+    text-align: center;
     transition: all 1s ease;
 }
 
+.sub_img{
+    width: 800px;
+    height: 500px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    transition: all 1s ease;
+    /* border: 2px solid red; */
+    background-image: url(/introduce_sub_img.svg);
+    background-size: 100% 100%;
+    background-position: center;
+}
 .signature {
     color: black;
+    width: 800px;
     font-size: 24px;
     font-family: 'NanumGothic';
-    font-weight: 700;
+    font-weight: 500;
+    text-align: left;
     word-wrap: break-word;
     transition: all 1s ease;
+    padding: 40px 30px 40px 30px;
 }
 
 @media (max-width: 480px) {
