--- a/src/styles/microPiles.module.css
+++ b/src/styles/microPiles.module.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
     transition: all 1s ease;
     /* border: 2px solid violet; */
 }
@@ -110,7 +111,18 @@
     background-color: #004D7B;
     color: #000000;
 }
-
+.contents_container{
+    width: 90%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-evenly; */
+    background-color: #ffffff;
+    align-items: center;
+    transition: all 1s ease;
+    /* border: 2px solid violet; */
+}
 .concept_container {
     width: 100%;
     height: 300px;
