--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -24,13 +24,13 @@
     /* border: 3px solid green; */
 }
 
-.footer_title_text {
-    color: white;
-    font-size: 24px;
-    font-family: 'Nanum Gothic';
-    font-weight: 600;
-    word-wrap: break-word;
+.footer_title_logo {
+    width: 200px;
+    height: 50px;
     transition: all 1s ease; 
+    background-image: url('/gittan_logo.svg');
+    background-position: center;
+    background-size: 100% 100%;
     /* border: 1px solid red; */
 }
 
@@ -54,8 +54,9 @@
     .footer_container {
         height: 75px;
     }
-    .footer_title_text{
-        font-size: 12px;
+    .footer_title_logo{
+        width: 100px;
+        height: 25px;
     }
 
     .footer_content_text{
