--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -28,7 +28,7 @@
     width: 200px;
     height: 50px;
     transition: all 1s ease; 
-    background-image: url('/gittan_logo.svg');
+    background-image: url('/gittan_logo_gray.svg');
     background-position: center;
     background-size: 100% 100%;
     /* border: 1px solid red; */
