--- a/src/styles/helixPiles.module.css
+++ b/src/styles/helixPiles.module.css
@@ -320,7 +320,7 @@
     /* border: 2px solid green; */
 }
 .apply_description ul{
-    width: 100%;
+    width: 85%;
     display: flex;
     flex-direction: column;
     padding-left: 40px;
@@ -475,9 +475,12 @@
     .apply_background{
         height: 150px;
     }
-
+    .apply_image{
+        width: 50%;
+    }
     .apply_description {
         font-size: 10px;
+        width: 50%;
     }
     .apply_description ul{
         padding-left: 20px;
