--- a/src/styles/introduceCo.module.css
+++ b/src/styles/introduceCo.module.css
@@ -104,8 +104,8 @@
     background: #ffffff;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
     gap: 29px;
     /* border: solid 2px #274FC1; */
     transition: all 1s ease;
@@ -133,14 +133,19 @@
     word-wrap: break-word;
     text-align: center;
     transition: all 1s ease;
+    background-image: linear-gradient(to right,white,black, black, white);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: 250px 2px;
+    /* border: 2px solid #274FC1; */
 }
 
 .content {
     width: 100%;
-    color: black;
-    font-size: 24px;
+    color: #4C4C4C;
+    font-size: 20px;
     font-family: 'NanumGothic';
-    font-weight: 400;
+    font-weight:lighter;
     word-wrap: break-word;
     text-align: center;
     transition: all 1s ease;
@@ -161,15 +166,18 @@
     background-position: center;
 }
 .signature {
-    color: black;
+    color: #4C4C4C;
     width: 800px;
-    font-size: 24px;
+    font-size: 20px;
     font-family: 'NanumGothic';
-    font-weight: 500;
+    font-weight:lighter;
     text-align: left;
     word-wrap: break-word;
     transition: all 1s ease;
     padding: 40px 30px 40px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     /* border: 2px solid #274FC1; */
 }
 
@@ -221,6 +229,7 @@
 
     .title {
         font-size: 20px;
+        background-size: 150px 2px;
     }
 
     .content {
@@ -228,9 +237,10 @@
     }
 
     .signature {
-        width: 200px;
+        width: 300px;
         height: 300px;
-        font-size: 11px;
+        padding: 0;
+        font-size: 10px;
     }
   }
 
