--- a/src/styles/introduceCo.module.css
+++ b/src/styles/introduceCo.module.css
@@ -126,7 +126,7 @@
     width: 100%;
     height: 10%;
     color: #000000;
-    font-size: 48px;
+    font-size: 40px;
     font-family: 'NanumGothic';
     font-weight: 800;
     letter-spacing: 1.60px;
@@ -136,6 +136,7 @@
     background-image: linear-gradient(to right,white,black, black, white);
     background-repeat: no-repeat;
     background-position: center bottom;
+    padding: 0px 0px 15px 0px;
     background-size: 250px 2px;
     /* border: 2px solid #274FC1; */
 }
@@ -178,6 +179,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    line-height: 1.7;
     /* border: 2px solid #274FC1; */
 }
 
