--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -93,10 +93,10 @@
 }
 
 .side_bar_item{
-    width: 10%;
-    height: 10px;
+    width: 20px;
+    height: 20px;
     border: 1px solid #EAEAEA;
-    border-radius: 20px;
+    border-radius: 50%;
     transition: all 1s ease;
 }
 
@@ -121,7 +121,6 @@
     transition: all 1.5s ease;
     /* border: 2px solid green; */
     margin: 80px 0px 30px 0px;
-
 }
 .main_info_title span{
     color: #1A4CFD;
