Fix main page font-color gray to white

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,8 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: 238, 241, 242;
+  --background-end-rgb: 238, 241, 242;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -30,6 +30,7 @@ html, body {
   color: rgb(var(--foreground-rgb));
   padding: 0;
   margin: 0;
+  background: #EEF1F2;
 }
 @layer utilities {
   .text-balance {
