--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,10 +3,12 @@
     height: 100%;
     margin: 0;
     padding:0;
+    background: #EEF1F2;
 }
 
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background: #EEF1F2;
 }
