--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -20,7 +20,6 @@
     justify-content: center;
     align-items: center;
     /* border: 2px solid orange; */
-
 }
 
 .main_image {
@@ -84,7 +83,7 @@
   }
 
 .side_bar_wrapper{
-    width: 50%;
+    width: 15%;
     position: absolute;
     bottom: 15%;
     display: flex;
@@ -119,6 +118,7 @@
     font-weight: 600;
     word-wrap: break-word;
     transition: all 1.5s ease;
+    height: 100px;
     /* border: 2px solid green; */
     margin: 80px 0px 30px 0px;
 }
@@ -135,6 +135,7 @@
     word-wrap: break-word;
     transition: all 1.5s ease;
     margin: 60px 0px 60px 0px;
+    /* border: 2px solid green; */
 } 
 
 .main_info_img_container{
@@ -165,10 +166,12 @@
     width: 100%;
     height: 600px;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     position: relative;
     transition: all 1.5s ease;
+    /* border: 2px solid red; */
 }
 
 .main_info_item2{
@@ -180,22 +183,71 @@
     position: relative;
     transition: all 1.5s ease;
 }
-
 .main_info_img{
     width: 100%;
     height: 100%;
-    position: relative;
+    position: absolute;
+    left: 0px;
+    top: 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-position: center;
     background-size: cover;
-    transition: all 1.5s ease;
-    filter: brightness(80%);
-}
-.main_info_img {
     transition: transform 1s ease-in-out;
+}
+.main_info_contents_title{
+    text-align: center;
+    color: white;
+    position: absolute;
+    top: 55%;
+    font-size: 48px;
+    font-family: 'Nanum Gothic';
+    font-weight: 600;
+    word-wrap: break-word;
+    transition: all 1.5s ease;
+    /* border: 2px solid yellow; */
+    margin: 0px 0px 0px 0px;
+}
+.main_info_contents_text{
+    text-align: center;
+    color: white;
+    position: absolute;
+    top: 70%;
+    font-size: 24px;
+    font-family: 'Nanum Gothic';
+    font-weight: 400;
+    word-wrap: break-word;
+    transition: all 1.5s ease;
+    /* border: 2px solid yellow; */
+    margin: 0px 0px 0px 0px;
+}
+.main_info_contents_title2{
+    text-align: center;
+    color: white;
+    position: absolute;
+    top: 40%;
+    font-size: 48px;
+    font-family: 'Nanum Gothic';
+    font-weight: 600;
+    word-wrap: break-word;
+    transition: all 1.5s ease;
+    /* border: 2px solid yellow; */
+    margin: 0px 0px 0px 0px;
+}
+.main_info_contents_text2{
+    text-align: center;
+    color: white;
+    position: absolute;
+    top: 70%;
+    font-size: 24px;
+    font-family: 'Nanum Gothic';
+    font-weight: 400;
+    word-wrap: break-word;
+    transition: all 1.5s ease;
+    /* border: 2px solid yellow; */
+    margin: 0px 0px 0px 0px;
 }
 
 .main_info_item1:hover .main_info_img,
