--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -32,6 +32,15 @@
     transition: all 1.5s ease;
 }
 
+.main_overlay{
+    height: 100%;
+    width: 100%;
+    top :0px;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.60);
+    transition: all 1.5s ease;
+}
+
 .overlay {
     height: 100%;
     width: 100%;
@@ -52,6 +61,7 @@
     transition: all 1s ease;
     white-space: pre-line;
 }
+
 .scroll_bar_wrapper{
     width: 100%;
     height: 50%;
