--- a/src/styles/bin.module.css
+++ b/src/styles/bin.module.css
@@ -72,18 +72,18 @@
 
 .body{
     width: 100%;
-    height: 80vh;
+    height: 55vh;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     background: #EEF1F2;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
 }
 
 .form_wrapper {
     width: 50%;
-    height: 70vh;
+    height: 50vh;
     position: relative;
     display: flex;
     flex-direction: column;
