--- a/src/styles/bin.module.css
+++ b/src/styles/bin.module.css
@@ -72,7 +72,7 @@
 
 .body{
     width: 100%;
-    height: 55vh;
+    height: 700px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -83,7 +83,7 @@
 
 .form_wrapper {
     width: 50%;
-    height: 50vh;
+    height: 600px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -120,7 +120,7 @@
 
 .form_container{
     width: 100%;
-    /* height: 80%; */
+    height: 80%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -202,7 +202,7 @@
 .form_cancel{
     height: 20px;
     position: relative;
-    margin: 5% 5% 5% 0%;
+    margin: 5% 0% 5% 0%;
     border: none;
     color: white;
     background-color: #4641D9;
