--- a/src/styles/gittanGallery.module.css
+++ b/src/styles/gittanGallery.module.css
@@ -118,6 +118,34 @@
     /* border: 2px solid red; */
 }
 
+.board_title_wrapper{
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid blue; */
+    background-image: linear-gradient(to right,#D3D3D3, #D3D3D3);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    padding: 0px 0px 10px 0px;
+    background-size: 100% 1px;
+    margin-bottom: 20px;
+
+}
+
+.board_box{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid red; */
+
+}
+
 .board_title {
     /* width: 100%; */
     position: relative;
@@ -125,6 +153,21 @@
     font-size: 20px;
     font-weight: 600;
     /* border: 2px solid blue; */
+}
+
+.board_footer{
+    width: 100%;
+    height: 5%;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 1px solid black; */
+    background-image: linear-gradient(to right,#D3D3D3, #D3D3D3);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    padding: 0px 0px 1% 0px;
+    background-size: 100% 2px;
 }
 
 
