Remmove logo wrapper border

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -20,7 +20,7 @@
     text-decoration: none;
     padding: 0.5%;
     gap:1%;
-    border: 2px solid green;
+    /* border: 2px solid green; */
 }
 
 .logo_image{
