--- a/src/styles/gittanGallery.module.css
+++ b/src/styles/gittanGallery.module.css
@@ -122,37 +122,61 @@
     width: 100%;
     position: relative;
     display: flex;
-    justify-content: center;
     align-items: center;
-    /* border: 2px solid blue; */
-    background-image: linear-gradient(to right,#D3D3D3, #D3D3D3);
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    padding: 0px 0px 10px 0px;
-    background-size: 100% 1px;
-    margin-bottom: 20px;
-
 }
 
 .board_box{
+    width: 10px;
+    height: 10px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 2%;
+    background-color: black;
+}
+
+.board_title {
+    position: relative;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.board_body_wrapper{
     width: 100%;
-    height: 100%;
+    height: 50%;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     /* border: 2px solid red; */
-
 }
 
-.board_title {
-    /* width: 100%; */
+.board_body{
+    width: 100%;
+    height: 80%;
     position: relative;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    /* border: 2px solid red; */
+}
+
+.board_no_data{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 20px;
     font-weight: 600;
-    /* border: 2px solid blue; */
+    color: gray;
+    /* border: 2px solid red; */
 }
 
 .board_footer{
@@ -162,13 +186,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* border: 1px solid black; */
-    background-image: linear-gradient(to right,#D3D3D3, #D3D3D3);
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    padding: 0px 0px 1% 0px;
-    background-size: 100% 2px;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000; 
+    margin-top: 5%;
 }
+
 
 
 
