Fix gittanGallery board body rayout

--- a/src/styles/gittanGallery.module.css
+++ b/src/styles/gittanGallery.module.css
@@ -188,7 +188,7 @@
     align-items: center;
     border-top: 1px solid #000;
     border-bottom: 1px solid #000; 
-    margin-top: 5%;
+    margin: 5% 0% 5% 0%;
 }
 
 
