--- a/src/styles/gittanGallery.module.css
+++ b/src/styles/gittanGallery.module.css
@@ -163,12 +163,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* border: 2px solid red; */
+    /* border: 2px solid blue; */
 }
 
 .board_no_data{
     width: 100%;
-    height: 100%;
+    height: 50%;
     position: relative;
     display: flex;
     justify-content: center;
@@ -176,19 +176,40 @@
     font-size: 20px;
     font-weight: 600;
     color: gray;
-    /* border: 2px solid red; */
+    /* border: 2px solid black; */
 }
 
 .board_footer{
     width: 100%;
-    height: 5%;
+    height: 50%;
     position: relative;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #000; 
+    margin: 0% 0% 3% 0%;
+    /* border: 2px solid red; */
+}
+
+.board_footer_line{
+    width: 100%;
+    height: 15%;
+    position: relative;
+    border-top: 2px solid #D3D3D3;
+    border-bottom: 2px solid #D3D3D3; 
     margin: 5% 0% 5% 0%;
+}
+
+.board_page_button{
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 600;
+    color: gray;
+    /* border: 2px solid red; */
 }
 
 
