--- a/src/styles/gittanGallery.module.css
+++ b/src/styles/gittanGallery.module.css
@@ -72,7 +72,7 @@
 
 .body{
     width: 100%;
-    height: 800px;
+    height: 1200px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -82,8 +82,8 @@
 }
 
 .board_wrapper {
-    width: 50%;
-    height: 600px;
+    width: 80%;
+    height: 1000px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -154,17 +154,65 @@
     align-items: center;
     /* border: 2px solid red; */
 }
-
 .board_body{
     width: 100%;
-    height: 80%;
+    height: auto; 
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: space-around; */
     align-items: center;
+    /* border:2px solid #D3D3D3; */
+}
+
+.gallery{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: flex-start;
+    /* align-items: center; */
     /* border: 2px solid blue; */
 }
+
+.gallery_item{
+    width: calc(30% - 10px); 
+    height: auto;
+    margin: auto; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;
+    /* border: 2px solid red; */
+}
+
+.gallery_image{
+    width: 50%; 
+    height: auto;
+    object-fit: cover;
+    border: 5px solid #BDBDBD;
+
+}
+
+.gallery_title, .gallery_content{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gallery_title{
+    font-size: 14px;
+    font-weight: 600;
+    /* border: 2px solid blue; */
+}
+
+.gallery_content{
+    flex-grow: 1;
+    font-size: 10px;
+    /* border: 2px solid green; */
+}
+
+
 
 .board_no_data{
     width: 100%;
@@ -211,7 +259,3 @@
     color: gray;
     /* border: 2px solid red; */
 }
-
-
-
-
