--- a/src/styles/gittanGallery.module.css
+++ b/src/styles/gittanGallery.module.css
@@ -82,7 +82,7 @@
 }
 
 .board_wrapper {
-    width: 80%;
+    width: 65%;
     height: 1000px;
     position: relative;
     display: flex;
@@ -152,7 +152,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* border: 2px solid red; */
+    border: 2px solid red;
 }
 .board_body{
     width: 100%;
@@ -162,7 +162,7 @@
     flex-direction: column;
     /* justify-content: space-around; */
     align-items: center;
-    /* border:2px solid #D3D3D3; */
+    /* border:2px solid red; */
 }
 
 .gallery{
@@ -216,7 +216,7 @@
 
 .board_no_data{
     width: 100%;
-    height: 50%;
+    height: 80vh;
     position: relative;
     display: flex;
     justify-content: center;
