--- a/src/styles/gittanGallery.module.css
+++ b/src/styles/gittanGallery.module.css
@@ -72,18 +72,19 @@
 
 .body{
     width: 100%;
-    height: 1200px;
+    height: auto;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     background: #EEF1F2;
+    margin-bottom: 10%;
     /* border: 2px solid blue; */
 }
 
 .board_wrapper {
     width: 65%;
-    height: 1000px;
+    height: auto;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -99,7 +100,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* border: 1px solid black; */
+    /* border: 1px solid blue; */
     background-image: linear-gradient(to right,#D3D3D3, #D3D3D3);
     background-repeat: no-repeat;
     background-position: center bottom;
@@ -111,11 +112,11 @@
     position: relative;
     display: flex;
     align-items: center;
-    font-size: 10px;
+    font-size: 14px;
     color: gray;
     margin-top: 5%;
     margin-bottom: 5%;
-    /* border: 2px solid red; */
+    /* border: 2px solid yellowgreen; */
 }
 
 .board_title_wrapper{
@@ -152,7 +153,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 .board_body{
     width: 100%;
@@ -216,7 +217,7 @@
 
 .board_no_data{
     width: 100%;
-    height: 80vh;
+    height: auto;
     position: relative;
     display: flex;
     justify-content: center;
@@ -224,6 +225,7 @@
     font-size: 20px;
     font-weight: 600;
     color: gray;
+    padding: 10% 0% 10% 0%;
     /* border: 2px solid black; */
 }
 
@@ -259,3 +261,30 @@
     color: gray;
     /* border: 2px solid red; */
 }
+
+
+@media (max-width: 480px) {
+    .banner{
+        height: 220px;
+    }
+
+    .banner_title{
+        font-size: 18px;
+    }
+
+    .banner_contents{
+        font-size: 10px;
+    }
+
+    .board_title{
+        font-size: 16px;
+    }
+
+    .board_index{
+        font-size: 10px;
+    }
+
+    .board_no_data{
+        font-size: 14px;
+    }
+  }
