--- a/src/styles/gittanGallery.module.css
+++ b/src/styles/gittanGallery.module.css
@@ -171,7 +171,9 @@
     display: flex;
     flex-wrap: wrap; 
     justify-content: flex-start;
+    margin-top: 5%;    
     /* align-items: center; */
+    
     /* border: 2px solid blue; */
 }
 
@@ -187,9 +189,10 @@
 }
 
 .gallery_image{
-    width: 50%; 
-    height: auto;
-    object-fit: cover;
+    width: 100%; 
+    height: 20vh;
+    background-size: 100% 100%;
+    background-position: center;
     border: 5px solid #BDBDBD;
 
 }
