Fix gittan gallery rayout

--- a/src/styles/gittanGallery.module.css
+++ b/src/styles/gittanGallery.module.css
@@ -1,13 +1,13 @@
 .wrapper {
     width: 100%;
-    height: 100%;
+    height: 200%;
     margin: 0px;
     padding: 0px;
     background: #EEF1F2;
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     /* border: 2px solid violet; */
 }
 
@@ -78,7 +78,7 @@
     flex-direction: column;
     align-items: center;
     background: #EEF1F2;
-    margin-bottom: 10%;
+    margin-bottom: 40%;
     /* border: 2px solid blue; */
 }
 
@@ -280,14 +280,14 @@
     }
 
     .board_title{
-        font-size: 16px;
+        font-size: 12px;
     }
 
     .board_index{
-        font-size: 10px;
+        font-size: 8px;
     }
 
     .board_no_data{
-        font-size: 14px;
+        font-size: 10px;
     }
   }
