--- a/src/styles/admin.module.css
+++ b/src/styles/admin.module.css
@@ -186,6 +186,7 @@
     display: flex;
     border-top: 1px dotted gray;
     justify-content: right;
+    gap: 0.1%;
     
 }
 
@@ -193,20 +194,18 @@
     height: 20px;
     position: relative;
     margin: 5% 0% 5% 0%;
-    border: none;
     color: white;
-    background-color: #4641D9;
-    /* border: 2px solid red; */
+    border: 2px solid gray;
+    background-color: #4374D9;
 }
 
 .form_cancel{
     height: 20px;
     position: relative;
     margin: 5% 0% 5% 0%;
-    border: none;
     color: white;
-    background-color: #4641D9;
-    /* border: 2px solid red; */
+    border: 2px solid gray;
+    background-color: #4374D9;
 }
 
 
