--- a/src/styles/gittanGallery.module.css
+++ b/src/styles/gittanGallery.module.css
@@ -170,10 +170,9 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap; 
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
     margin-top: 5%;    
     /* align-items: center; */
-    
     /* border: 2px solid blue; */
 }
 
