--- a/src/styles/admin.module.css
+++ b/src/styles/admin.module.css
@@ -197,6 +197,7 @@
     color: white;
     border: 2px solid gray;
     background-color: #4374D9;
+    cursor: pointer;
 }
 
 .form_cancel{
@@ -206,6 +207,7 @@
     color: white;
     border: 2px solid gray;
     background-color: #4374D9;
+    cursor: pointer;
 }
 
 
