--- a/src/styles/estimate.module.css
+++ b/src/styles/estimate.module.css
@@ -132,15 +132,16 @@
 
 
   .close_button {
-    width: 42px;
-    height: 42px;
+    width: 45px;
+    height: 45px;
     color: white;
-    font-size: 16px;
+    font-size: 14px;
     font-family: 'Nanum Gothic';
     font-weight: 600;
     transition: all 1s ease;
     margin-right: 25px;
-    /* border: 1px solid blue; */
+    cursor: pointer;
+    /* border: 3px solid blue; */
   }
 
 
