--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -12,6 +12,8 @@
     justify-content: center;
     position: relative;
     cursor: pointer;
+    /* border: 2px solid red; */
+    transition: all 1.5s ease;
 }
 
 .main_image{
@@ -19,15 +21,20 @@
     height: 250px;
     top :0px;
     position: absolute;
+    transition: all 1.5s ease;
 }
 
 .main_text{
     color: white;
-    margin-left: 5%;
-    font-size: 32px;
+    margin-left: 10%;
+    font-size: 20px;
     position: relative;
+    transition: all 1.5s ease;
 }
 
+.main_title{
+    font-size: 24px;
+}
 .overlay{
     width: 100%;
     height: 250px;
@@ -40,21 +47,32 @@
 .call_number{
     text-decoration: none;
     color: white;
+    transition: all 1s ease; 
+}
+.icon_item_number{
+    font-size: 48px;
+    display: flex;
+    align-items: center;
+    gap: 1%;
+    transition: all 1s ease; 
+    /* border: 2px solid red; */
+    margin: 1% 0% 1% 0%;
 }
 
 .icon_item{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 2%;
 }
 
 .icon{
-    width: 30px;
-    height: 30px;
+    width: 48px;
+    height: 48px;
     color: white;
     background-color: white;
     background-position: center;
     background-size: 100% 100%;
+    transition: all 1s ease; 
 }
 
 .footer_container {
@@ -113,6 +131,34 @@
 }
 
 @media (max-width: 480px) {
+    .footer_call_wrapper{
+        height: 150px;
+    }
+    .main_image{
+        height: 150px;
+    }
+
+    .main_text{
+        font-size: 14px;
+    }
+
+    .main_title{
+        font-size: 14px;
+    }
+
+    .overlay{
+        height: 150px;
+    }
+
+    .icon_item_number{
+        font-size: 18px;
+    }
+
+    .icon{
+        width: 20px;
+        height: 20px;
+    }
+
     .footer_container {
         height: 100px;
     }
