--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -21,6 +21,9 @@
     height: 250px;
     top :0px;
     position: absolute;
+    background-position: center;
+    background-size: 100% 100%;
+    border: 2px solid red;
     transition: all 1.5s ease;
 }
 
@@ -157,6 +160,7 @@
     .icon{
         width: 20px;
         height: 20px;
+      
     }
 
     .footer_container {
