--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -12,7 +12,6 @@
     justify-content: center;
     position: relative;
     cursor: pointer;
-    /* border: 2px solid red; */
     transition: all 1.5s ease;
 }
 
@@ -22,8 +21,7 @@
     top :0px;
     position: absolute;
     background-position: center;
-    background-size: 100% 100%;
-    border: 2px solid red;
+    background-size: cover;
     transition: all 1.5s ease;
 }
 
@@ -160,7 +158,6 @@
     .icon{
         width: 20px;
         height: 20px;
-      
     }
 
     .footer_container {
