--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -146,9 +146,12 @@
     position: relative;
     flex-direction: column;
     justify-content: space-between;
-    /* border: 1px solid blue; */
-    height: 50px;
-    margin-top: 2%;
+    height: 70px;
+    margin-top: 3%;
+}
+.subitem{
+    font-size: 20px;
+    font-weight:800;
 }
 
 .textitem{
@@ -161,16 +164,12 @@
     justify-content: space-between;
 }
 
-.subitem{
-    font-size: 14px;
-    font-weight:800;
-}
-
 .subitem span{
     color: red;
 }
 
 .inputField{
+    height: 30px;
     border-width: 1px;
     border-radius: 5px;
 }
@@ -195,3 +194,45 @@
     background-color: white;
     
 }
+
+
+@media (max-width: 480px) {
+    .banner{
+        height: 220px;
+    }
+
+    .banner_title{
+        font-size: 18px;
+        margin-bottom: 35px;
+    }
+
+    .banner_contents{
+        font-size: 10px;
+    }
+
+    .item{
+        height: 50px;
+    }
+
+    .subitem{
+        font-size: 12px;
+        font-weight:800;
+    }
+    
+    .inputField{
+        padding: 0;
+        height: 15px;
+    }
+
+    .textitem{
+        height: 200px;
+    }
+
+    .inputField{
+        height: 15px;
+    }
+
+    .textareaField{
+        height: 150px;
+    }
+  }
