--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -142,13 +142,16 @@
 
 .item{
     height: auto;
+    margin-top: 2%;
     display: flex;
     position: relative;
     flex-direction: column;
     justify-content: space-between;
     height: 70px;
-    margin-top: 3%;
+    gap: 10px;
+   
 }
+
 .subitem{
     font-size: 20px;
     font-weight:800;
@@ -156,12 +159,12 @@
 
 .textitem{
     width: 100%;
-    height: 330px;
-    /* border: 2px solid red; */
+    height: auto;
     margin-top: 2%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 10px;
 }
 
 .subitem span{
@@ -181,12 +184,13 @@
 }
 
 .submitButton{
-    width: 20%;
+    width: 15%;
     color: white;
     background-color: black;
     border-radius: 5px;
+    font-size: 24px;
     margin-top: 2%;
-    margin-left: 80%;
+    margin-left: 85%;
 }
 
 .submitButton:hover{
@@ -211,7 +215,8 @@
     }
 
     .item{
-        height: 50px;
+        height: 40px;
+        gap: 5px;
     }
 
     .subitem{
@@ -226,6 +231,7 @@
 
     .textitem{
         height: 200px;
+        gap: 5px;
     }
 
     .inputField{
@@ -233,6 +239,11 @@
     }
 
     .textareaField{
-        height: 150px;
+        height: 180px;
+    }
+    .submitButton{
+        width: 20%;
+        margin-left: 80%;
+        font-size: 8px;
     }
   }
