--- a/src/styles/admin.module.css
+++ b/src/styles/admin.module.css
@@ -75,18 +75,18 @@
 
 .body{
     width: 100%;
-    height: 800px;
+    height: 100vh;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     background: #EEF1F2;
-    /* border: 2px solid blue; */
+    border: 2px solid blue;
 }
 
 .form_wrapper {
     width: 65%;
-    height: 600px;
+    height: 80vh;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -119,15 +119,17 @@
     padding: 0px 0px 10px 0px;
     background-size: 100% 1px;
     margin-bottom: 20px;
+
 }
 
 .form_container{
     width: 100%;
-    height: 80%;
+    height: 65vh;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    /* border: 2px solid red; */
     /* align-items: center; */
     /* border: 2px solid red; */
 }
@@ -184,34 +186,33 @@
 }
 
 .form_submit_item{
-    width: 100%;
-    height: 100%;
+    width: 10%;
+    height: 40px;
     display: flex;
-    border-top: 1px dotted gray;
-    justify-content: right;
-    gap: 0.1%;
-    
+    margin-left: 90%;
+    /* border-top: 1px dotted gray; */
+    justify-content: space-between;
+    margin-top: 10px;
+    /* border: 2px solid red; */
 }
 
 .form_submit{
-    height: 20px;
+    height: 40px;
+    width: 100px;
     position: relative;
-    margin: 5% 0% 5% 0%;
+    border-radius: 10px;
     color: white;
     border: 2px solid gray;
     background-color: #4374D9;
     cursor: pointer;
+    border: 2px solid white;
+}
+.form_submit:hover{
+    background-color: white;
+    color: #4374D9;
+    border:1px solid black
 }
 
-.form_cancel{
-    height: 20px;
-    position: relative;
-    margin: 5% 0% 5% 0%;
-    color: white;
-    border: 2px solid gray;
-    background-color: #4374D9;
-    cursor: pointer;
-}
 
 
 @media (max-width: 480px) {
