--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -1,6 +1,6 @@
 .modalBackground{
     width: 100%;
-    height: 1000px;
+    height: 100%;
     transition: all 1s ease;
     /* border: 2px solid red; */
 }
@@ -11,14 +11,18 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-around;
-    /* gap: 5%; */
     transition: all 1s ease;
 }
 
 .header{
+    width: 90%;
+    height: 40%;
     display: flex;
     justify-content: space-between;
+    /* border: 2px solid red; */
+    margin-bottom: 5%;
 }
 
 .close_button{
@@ -34,13 +38,14 @@
 .delete_button{
     background-color: white;
     background-color:transparent;
-    color: red;
+    /* color: red; */
 }
 
 .delete_button:hover {
     background-color: black;
     color: white;
   }
+
 .title{
     width: 90%;
     height: 5%;
@@ -52,6 +57,7 @@
     margin: 0% 5% 0% 5%;
     font-size: 24px;
     transition: all 1s ease;
+    margin-bottom: 5%;
 }
 
 
@@ -63,14 +69,17 @@
     align-items: center;
     justify-content: center;
     transition: all 1s ease;
+    margin-bottom: 5%;
 }
+
 .item{
     width: 80%;
     height: auto;
     margin: 0% 10% 0% 10%;
-    font-size: 12px;
+    font-size: 16px;
     transition: all 1s ease;
     margin: 0;
+    /* border: 2px solid red; */
 }
 
 @media (max-width: 480px) {
