--- a/src/styles/admin.module.css
+++ b/src/styles/admin.module.css
@@ -81,7 +81,7 @@
     flex-direction: column;
     align-items: center;
     background: #EEF1F2;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
 }
 
 .form_wrapper {
