--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -6,7 +6,7 @@
 }
 
 .modalContainer{
-    /* border: 2px solid green; */
+    border: 2px solid green;
     width: 100%;
     height: 100%;
     display: flex;
@@ -17,7 +17,7 @@
 }
 
 .header{
-    width: 90%;
+    width: 96%;
     height: 40%;
     display: flex;
     justify-content: space-between;
@@ -33,6 +33,7 @@
     align-content: center;
     border: 1px solid #BDBDBD;
     transition: all 1s ease;
+    margin-top: 5%;
 }
 
 .delete_button{
@@ -47,14 +48,14 @@
   }
 
 .title{
-    width: 90%;
+    width: 96%;
     height: 5%;
     display: flex;
     justify-content: center;
     align-items: center;
     /* border: 2px solid blue; */
     background-color: #EBF7FF;
-    margin: 0% 5% 0% 5%;
+    margin: 0% 2% 0% 2%;
     font-size: 24px;
     transition: all 1s ease;
     margin-bottom: 5%;
@@ -62,9 +63,9 @@
 
 
 .Image{
-    width: 80%;
+    width: 96%;
     height: auto;
-    margin: 0% 10% 0% 10%;
+    margin: 0% 2% 0% 2%;
     /* border: 2px solid red; */
     align-items: center;
     justify-content: center;
@@ -73,12 +74,12 @@
 }
 
 .item{
-    width: 80%;
+    width: 96%;
     height: auto;
-    margin: 0% 10% 0% 10%;
+    margin: 0% 2% 0% 2%;
     font-size: 16px;
     transition: all 1s ease;
-    margin: 0;
+    margin-bottom: 5%;
     /* border: 2px solid red; */
 }
 
