--- a/src/styles/admin.module.css
+++ b/src/styles/admin.module.css
@@ -184,33 +184,33 @@
     margin: 2% 5% 2% 5%;
     /* border: 2px solid yellow; */
 }
-
+.form_line{
+    width: 100%;
+    border-top: 1px dotted gray;
+}
 .form_submit_item{
-    width: 10%;
+    width: 100%;
     height: 40px;
     display: flex;
-    margin-left: 90%;
-    /* border-top: 1px dotted gray; */
-    justify-content: space-between;
-    margin-top: 10px;
-    /* border: 2px solid red; */
+    justify-content: right;
+    gap: 1%;
+    margin: 5% 0% 5% 0%;
 }
 
 .form_submit{
     height: 40px;
-    width: 100px;
-    position: relative;
+    width: 80px;
+    /* position: relative; */
     border-radius: 10px;
     color: white;
     border: 2px solid gray;
     background-color: #4374D9;
     cursor: pointer;
-    border: 2px solid white;
+    border: 2px solid black;
 }
 .form_submit:hover{
     background-color: white;
     color: #4374D9;
-    border:1px solid black
 }
 
 
@@ -226,5 +226,22 @@
 
     .banner_contents{
         font-size: 10px;
+    }
+    .form_submit{
+        height: 25px;
+        width: 50px;
+    }
+  }
+  @media (min-width: 481px) and (max-width: 768px) {
+    .form_submit{
+        height: 30px;
+        width: 60px;
+    }
+  }
+
+  @media (min-width: 769px) and (max-width: 1024px) {
+    .form_submit{
+        height: 35px;
+        width: 70px;
     }
   }
