--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -6,7 +6,7 @@
 }
 
 .modalContainer{
-    border: 2px solid green;
+    /* border: 2px solid green; */
     width: 100%;
     height: 100%;
     display: flex;
