estimate cusor to point

--- a/src/styles/estimate.module.css
+++ b/src/styles/estimate.module.css
@@ -18,6 +18,7 @@
     justify-content: center;
     align-items: center;
     transition: all 1s ease;
+    cursor: pointer;
     /* border: 2px solid red; */
   }
 
