--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -35,6 +35,12 @@
 
 .main_title{
     font-size: 24px;
+    display: flex;
+    align-items: center;
+}
+.main_sub_title{
+    font-size: 20px;
+    color: #D5D5D5;
 }
 .overlay{
     width: 100%;
