--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -38,9 +38,11 @@
     display: flex;
     align-items: center;
 }
+
 .main_sub_title{
     font-size: 20px;
     color: #D5D5D5;
+    text-align: center;
 }
 .overlay{
     width: 100%;
@@ -150,7 +152,7 @@
         font-size: 10px;
     }
     .main_sub_title{
-        font-size: 10px;
+        font-size: 8px;
     }
     .footer_content_text{
         font-size: 10px;
